--- a/FFHS/Semester 1/WebG/PA/src/details.html
+++ b/FFHS/Semester 1/WebG/PA/src/details.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/details.css">
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -9,39 +10,43 @@
     <title>Product Details</title>
 </head>
 <body>
-<header>
-    <h1>Super Store</h1>
+<header class="header">
+    <h1 class="title">Super Store</h1>
     <nav>
         <button class="burger-menu" onclick="toggleMenu()">&#9776;</button>
-        <ul id="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="cart.html">Cart</a></li>
-            <li><a href="feedback.html">Feedback</a></li>
+        <ul class="nav-list" id="nav-list">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="cart.html">Cart</a></li>
+            <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
         </ul>
     </nav>
 </header>
-<section>
-    <h2>iPhone 16</h2>
-    <span class="category-btn">Kategorie 1</span>
-    <p class="description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt...</p>
+<main>
+    <section>
+        <h2>iPhone 16</h2>
+        <span class="category-btn">Kategorie 1</span>
+        <p class="description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+            invidunt...</p>
 
-    <div class="price-and-cart">
-        <span class="price">CHF 11.90</span>
+        <div class="price-and-cart">
+            <span class="price">CHF 11.90</span>
 
-        <div class="cart-actions">
-            <button class="like-btn">Like</button>
-            <label for="amount">Anzahl</label>
-            <input id="amount" value="1" type="number">
-            <a href="cart.html">
-                <button class="cart-btn">Zum Warenkorb</button>
-            </a>
+            <div class="cart-actions">
+                <button class="like-btn">Like</button>
+                <label for="amount">Anzahl</label>
+                <input id="amount" value="1" type="number">
+                <a href="cart.html">
+                    <button class="cart-btn">Zum Warenkorb</button>
+                </a>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
+</main>
 
 <footer>
     (c) Super Store
 </footer>
 
+<script src="js/menu.js"></script>
 </body>
 </html>
