--- a/FFHS/Semester 1/WebG/PA/src/feedback.html
+++ b/FFHS/Semester 1/WebG/PA/src/feedback.html
@@ -1,64 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/feedback.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback Form</title>
 </head>
 <body>
-<header>
-    <h1>Super Store</h1>
+<header class="header">
+    <h1 class="title">Super Store</h1>
     <nav>
         <button class="burger-menu" onclick="toggleMenu()">&#9776;</button>
-        <ul id="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="cart.html">Cart</a></li>
-            <li><a href="feedback.html">Feedback</a></li>
+        <ul class="nav-list" id="nav-list">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="cart.html">Cart</a></li>
+            <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
         </ul>
     </nav>
 </header>
 
-<h2>Feedback</h2>
+<main>
 
-<form>
-    <fieldset>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" placeholder="Vollständiger Name" required>
-    </fieldset>
+    <h2>Feedback</h2>
 
-    <fieldset>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="beispiel@mustermail.com" required>
-    </fieldset>
+    <form>
+        <fieldset>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" placeholder="Vollständiger Name" required>
+        </fieldset>
 
-    <fieldset>
-        <label for="rating-design">Bewertung des Designs:</label>
-        <input id="rating-design" type="range" min="1" max="100" value="50">
-    </fieldset>
+        <fieldset>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="beispiel@mustermail.com" required>
+        </fieldset>
 
-    <fieldset>
-        <label for="rating-component">Bewertung der Komponente:</label>
-        <input id="rating-component" type="range" min="1" max="100" value="50">
-    </fieldset>
+        <fieldset>
+            <label for="rating-design">Bewertung des Designs:</label>
+            <input id="rating-design" type="range" min="1" max="100" value="50">
+        </fieldset>
 
-    <fieldset>
-        <label for="feedback">Kommentar:</label>
-        <textarea id="feedback" name="feedback" rows="4" cols="50" placeholder="Gib ein Kommentar ab hier..." required></textarea>
-    </fieldset>
+        <fieldset>
+            <label for="rating-component">Bewertung der Komponente:</label>
+            <input id="rating-component" type="range" min="1" max="100" value="50">
+        </fieldset>
 
-    <button>Jetzt senden</button>
-</form>
+        <fieldset>
+            <label for="feedback">Kommentar:</label>
+            <textarea id="feedback" name="feedback" rows="4" cols="50" placeholder="Gib ein Kommentar ab hier..."
+                      required></textarea>
+        </fieldset>
 
+        <button>Jetzt senden</button>
+    </form>
+
+</main>
 <footer>
     (c) Super Store
 </footer>
 
-<script>
-    function toggleMenu() {
-        const navLinks = document.getElementById('nav-links');
-        navLinks.classList.toggle('show');
-    }
-</script>
+<script src="js/menu.js"></script>
 </body>
 </html>
