--- a/FFHS/Semester 1/WebG/PA/src/index.html
+++ b/FFHS/Semester 1/WebG/PA/src/index.html
@@ -1,82 +1,85 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/home.css">
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
-    <link href="css/home.css" rel="stylesheet">
     <title>Home</title>
 </head>
 <body>
-<header>
-    <h1>Super Store</h1>
+<header class="header">
+    <h1 class="title">Super Store</h1>
     <nav>
-        <ul>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="cart.html">Cart</a>
-            </li>
-            <li>
-                <a href="feedback.html">Feedback</a>
-            </li>
+        <button class="burger-menu" onclick="toggleMenu()">&#9776;</button>
+        <ul class="nav-list" id="nav-list">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="cart.html">Cart</a></li>
+            <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
         </ul>
     </nav>
 </header>
 
-<div>
-    <button>Kotegorie 1</button>
-    <button>Kotegorie 2</button>
-    <button>Kotegorie 3</button>
-    <button>Kotegorie 4</button>
-</div>
-<section>
-    <article>
-        <a href="details.html">
-            <h2>iPhone 16</h2>
-        </a>
-        <p class="price">11.90 CHF</p>
-        <a href="cart.html">
-            <button>Zum Warenkorb</button>
-        </a>
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-            dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-            clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-        <button>Kategorie1</button>
-    </article>
+<main>
+    <div class="category-container">
+        <button class="category">Kotegorie 1</button>
+        <button class="category">Kotegorie 2</button>
+        <button class="category">Kotegorie 3</button>
+        <button class="category">Kotegorie 4</button>
+        <button class="category">Kotegorie 4</button>
 
-    <article>
-        <a href="details.html">
-            <h2>iPhone 15</h2>
-        </a>
-        <p>11.90 CHF</p>
-        <a href="cart.html">
-            <button>Zum Warenkorb</button>
-        </a>
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-            dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-            clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-        <button>Kategorie2</button>
-    </article>
+    </div>
+    <section class="grid">
+        <article class="product-container">
+            <a class="product-title" href="details.html">
+                <h2 >iPhone 16</h2>
+            </a>
+            <p class="product-price">11.90 CHF</p>
+            <p class="product-description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+                eirmod tempor invidunt ut labore et
+                dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+                Stet
+                clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+            <button class="product-category">Kategorie1</button>
+            <a class="product-cart" href="cart.html">
+                <button>Zum Warenkorb</button>
+            </a>
+        </article>
 
-    <article>
-        <a href="details.html">
-            <h2>iPhone 14</h2>
-        </a>
-        <p>11.90 CHF</p>
-        <a href="cart.html">
-            <button>Zum Warenkorb</button>
-        </a>
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-            dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-            clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-        <button>Kategorie3</button>
-    </article>
-</section>
+        <article class="product-container">
+            <a class="product-title" href="details.html">
+                <h2 >iPhone 15</h2>
+            </a>
+            <p class="product-price">11.90 CHF</p>
+            <p class="product-description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+                eirmod tempor invidunt ut labore et
+                dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+                Stet
+                clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+            <button class="product-category">Kategorie2</button>
+            <a class="product-cart" href="cart.html">
+                <button>Zum Warenkorb</button>
+            </a>
+        </article>
+
+        <article class="product-container">
+            <a class="product-title" href="details.html">
+                <h2 >iPhone 14</h2>
+            </a>
+            <p class="product-price">11.90 CHF</p>
+            <p class="product-description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+                eirmod tempor invidunt ut labore et
+                dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+                Stet
+                clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+            <button class="product-category">Kategorie3</button>
+            <a class="product-cart" href="cart.html">
+                <button>Zum Warenkorb</button>
+            </a>
+        </article>
+    </section>
+</main>
 
 <footer>
     (c) Super Store
