Update on WebG with nex JS exercises and adjusted the .css files as well as the .js

--- a/FFHS/Semester 1/WebG/PA/src/cart.html
+++ b/FFHS/Semester 1/WebG/PA/src/cart.html
@@ -1,55 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/cart.css">
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cart</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Warenkorb</title>
 </head>
 <body>
 <header class="header">
     <h1 class="title">Super Store</h1>
     <nav>
-        <button class="burger-menu" onclick="toggleMenu()">&#9776;</button>
         <ul class="nav-list" id="nav-list">
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="cart.html">Cart</a></li>
             <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
+            <li class="nav-item"><a class="nav-link" href="testimonials.html">Testimonials</a></li>
+            <li class="nav-item"><a class="nav-link" href="weitereprodukte.html">Mehr Produkte</a></li>
         </ul>
     </nav>
 </header>
 
-<section>
-    <h2>Cart</h2>
-    <article>
-        <a href="details.html">
-            <h3>iPhone 16</h3>
-        </a>
-        <div>
-            <button>+</button>
-            <input value="2" type="number"/>
-            <button>-</button>
-        </div>
-        <p>11.90 CHF</p>
-    </article>
-
-    <article>
-        <a href="details.html">
-            <h3>iPhone 15</h3>
-        </a>
-        <div>
-            <button>+</button>
-            <input value="2" type="number"/>
-            <button>-</button>
-        </div>
-        <p>11.90 CHF</p>
-    </article>
-</section>
+<main>
+    <h2>Dein Warenkorb</h2>
+    <div id="cart-section" class="cart-container">
+        <!-- Warenkorb-Elemente werden hier dynamisch eingefügt -->
+    </div>
+    <div class="cart-summary">
+        <p id="total-price">Gesamtpreis: 0 €</p>
+        <button id="checkout-button">Zur Kasse</button>
+    </div>
+</main>
 
 <footer>
     (c) Super Store
 </footer>
 
+<script src="js/cart.js"></script>
 </body>
 </html>
