--- a/FFHS/Semester 1/WebG/PA/src/index.html
+++ b/FFHS/Semester 1/WebG/PA/src/index.html
@@ -17,17 +17,19 @@
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="cart.html">Cart</a></li>
             <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
+            <li class="nav-item"><a class="nav-link" href="testimonials.html">Testimonials</a></li>
+            <li class="nav-item"><a class="nav-link" href="weitereprodukte.html">Mehr Produkte</a></li>
         </ul>
     </nav>
 </header>
 
 <main>
     <div class="category-container">
-        <button class="category">Kotegorie 1</button>
-        <button class="category">Kotegorie 2</button>
-        <button class="category">Kotegorie 3</button>
-        <button class="category">Kotegorie 4</button>
-        <button class="category">Kotegorie 4</button>
+        <button class="category">Kategorie 1</button>
+        <button class="category">Kategorie 2</button>
+        <button class="category">Kategorie 3</button>
+        <button class="category">Kategorie 4</button>
+        <button class="category">Kategorie 4</button>
 
     </div>
     <section class="grid">
