--- a/FFHS/Semester 1/WebG/PA/src/details.html
+++ b/FFHS/Semester 1/WebG/PA/src/details.html
@@ -18,27 +18,35 @@
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="cart.html">Cart</a></li>
             <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
+            <li class="nav-item"><a class="nav-link" href="testimonials.html">Testimonials</a></li>
+            <li class="nav-item"><a class="nav-link" href="weitereprodukte.html">Mehr Produkte</a></li>
         </ul>
     </nav>
 </header>
 <main>
-    <section>
-        <h2>iPhone 16</h2>
+    <section class="product-container">
+
+        <h2 class="product-title">iPhone 16</h2>
         <span class="category-btn">Kategorie 1</span>
+
         <p class="description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
             invidunt...</p>
 
         <div class="price-and-cart">
-            <span class="price">CHF 11.90</span>
 
             <div class="cart-actions">
                 <button class="like-btn">Like</button>
-                <label for="amount">Anzahl</label>
-                <input id="amount" value="1" type="number">
-                <a href="cart.html">
-                    <button class="cart-btn">Zum Warenkorb</button>
-                </a>
+
+                <div class="add-to-cart">
+                    <input class="amount-input" value="1" type="number">
+                    <a href="cart.html">
+                        <button class="cart-btn">Zum Warenkorb</button>
+                    </a>
+                </div>
+
+
             </div>
+            <span class="price">CHF 11.90</span>
         </div>
     </section>
 </main>
