--- a/FFHS/Semester 1/WebG/1 to 3_HTML_CSS_JS/webg-exercises/03_javascript/exercise7/index.html
+++ b/FFHS/Semester 1/WebG/1 to 3_HTML_CSS_JS/webg-exercises/03_javascript/exercise7/index.html
@@ -11,9 +11,28 @@
 
 
 <p style="display: none">
-
+    Aufgabe 7: Einfacher Taschenrechner mit HTML und JavaScript
+    Dauer: 15 Minuten
+    Ziel: Verständnis der DOM-Manipulation und Grundrechenarten in JavaScript üben.
+    Erstelle eine Datei aufgabe7.html und füge das HTML-Grundgerüst hinzu.
+    Erstelle ein Formular mit zwei Eingabefeldern für die Zahlen und vier Buttons für die Grundrechenarten: Addition, Subtraktion, Multiplikation und Division.
+    Schreibe JavaScript, das den Wert der ausgewählten Rechenart berechnet und das Ergebnis in einer div-Ausgabe anzeigt.
 </p>
 
+<main>
+    <h1>Rechner:</h1>
+    <label for="inputeins">Erste Zahl:</label>
+    <input type="number" id="inputeins" name="number" placeholder="Enter number"/>
+    </label>
+    <label for="inputzwei">Zweite Zahl:</label>
+    <input type="number" id="inputzwei" name="number" placeholder="Enter number"/>
+    </label><br>
+    <button type="button" id="add">ADD</button>
+    <button type="button" id="sub">SUB</button>
+    <button type="button" id="mul">MUL</button>
+    <button type="button" id="div">DIV</button>
+    <div id="message"></div>
+</main>
 
 
 
